vest-dsl/test/bad/choice_non_dependent.vest
fmt = choose {
  1(u8),
  2(u16),
  3(u24),
}
